# eiquadprog

./: .gitignore  CMakeLists.txt  README.md
cmake/: eiquadprogConfig.cmake.in
tests/: CMakeLists.txt
